--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script>
             var parameters = {
                 particleLimit: 256, // Keep this in sync with particleLimit in vertex shader!
-                extraUniforms: 1, // Update this when you add more uniforms to shader
+                extraUniforms: 1, // Update when you add more uniforms. Keep in sync too.
                 logFPS: true,
             }
         </script>
