--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         </script>
         <script type="x-shader/x-vertex" id="vertex-shader">
             #version 300 es
+            precision lowp float;
+
             // parameters
             const float floorGravity = 0.0001;
             const float particleGravity = 0.01;
@@ -114,7 +116,7 @@
         </script>
         <script type="x-shader/x-fragment" id="fragment-shader">
             #version 300 es
-            precision highp float;
+            precision lowp float;
             in vec4 color;
             out vec4 outColor;
             // The color is computed by vertex shader to avoid copying uniforms twice.
