--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     newV.y = (rand(vec2(random + 1.0)) * 2.0 - 1.0) * maxV;
                     state.x = rand(vec2(random + 2.2)) * 2.0 - 1.0;
                     state.y = rand(vec2(random + 3.0)) * 2.0 - 1.0;
-                    state.z = rand(vec2(random + 4.0));
+                    state.z = rand(vec2(random + 4.0)) * 0.5 + 0.5;
                 }
 
                 state.xy += oldV.xy;
